data/derived/fa15/progs/unify/prog0026.ml.out
Characters 21-34:
  let _ = stringOfList string_of_int [1;2;3;4;5;6];;
                       ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type string list
